# nexosim

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml  loom.yml
docs/Tutorial/: _quarto.yml  bench_assembly.qmd  connection_failures.qmd  creating_models.qmd  dynamic_topology.qmd  hardware_in_the_loop.qmd  hello_world.qmd  hierarchical_models.qmd  index.qmd  scheduling.qmd  styles.css
nexosim/: .dir-locals.el  Cargo.toml  build.rs  clippy.toml
nexosim-macros/: Cargo.toml  README.md
nexosim-macros/src/: lib.rs
nexosim-util/: CHANGELOG.md  Cargo.toml  README.md
nexosim-util/examples/: observables.rs  replier_adaptor.rs  simulation_driven.rs  uni_requestor.rs
nexosim-util/src/: combinators.rs  helper_models.rs  joiners.rs  lib.rs  models.rs  observable.rs  observables.rs
nexosim/examples/: assembly.rs  atomic_de_seed.rs  atomic_ser.rs  bench.rs  bench_save_restore.rs  espresso_machine.rs  external_input.rs  filter_map.rs.bak  infinite_loop.rs  init_restore.rs  pause.rs  power_supply.rs  query.rs  serialization.rs  serialization_api.rs  serialization_fn.rs  serialization_macro.rs  serialization_mod.rs  serialization_model.rs  serialization_reg.rs  serialization_server.rs  serialization_sources.rs  serialization_test.rs  server.rs  stepper_motor.rs
nexosim/src/: channel.rs  endpoints.rs  executor.rs  lib.rs  loom_exports.rs  macros.rs  model.rs  path.rs  ports.rs  registry.rs  server.rs  simulation.rs  time.rs  tracing.rs  util.rs
nexosim/src/channel/: queue.rs
nexosim/src/endpoints/: event_sink_info_registry.rs  event_sink_registry.rs  event_source_registry.rs  query_source_registry.rs
nexosim/src/executor/: mt_executor.rs  st_executor.rs  task.rs
nexosim/src/executor/mt_executor/: injector.rs  pool_manager.rs
nexosim/src/executor/task/: cancel_token.rs  promise.rs  runnable.rs
nexosim/src/executor/task/tests/: loom.rs
nexosim/src/macros/: schedulable.rs  scoped_thread_local.rs
nexosim/src/model/: context.rs
nexosim/src/ports/: output.rs  sink.rs  source.rs
nexosim/src/ports/input/: markers.rs  model_fn.rs
nexosim/src/ports/output/: broadcaster.rs  sender.rs
nexosim/src/ports/sink/: blocking_event_queue.rs  event_buffer.rs  event_queue.rs  event_slot.rs
nexosim/src/ports/source/: broadcaster.rs  sender.rs
nexosim/src/registry/: event_sink_registry.rs  event_source_registry.rs  query_source_registry.rs
nexosim/src/server/: codegen.rs  key_registry.rs  run.rs  services.rs
nexosim/src/server/api/: simulation.proto
nexosim/src/server/codegen/: simulation.v1.rs
nexosim/src/server/services/: bench_service.rs  build_service.rs  controller_service.rs  init_service.rs  inspector_service.rs  monitor_service.rs  scheduler_service.rs
nexosim/src/simulation/: events.rs  injector.rs  mailbox.rs  queue_items.rs  scheduler.rs  scheduler_events.rs  sim_init.rs
nexosim/src/time/: clock.rs  ticker.rs
nexosim/src/util/: bit.rs  indexed_priority_queue.rs  priority_queue.rs  rng.rs  serialization.rs  shared_cell.rs  slot.rs  sync_cell.rs  task_set.rs  traits.rs
nexosim/tests/integration/: main.rs  model_injector.rs  model_scheduling.rs  serialization.rs  simulation_clock_sync.rs  simulation_deadlock.rs  simulation_halt.rs  simulation_message_loss.rs  simulation_no_recipient.rs  simulation_panic.rs  simulation_pause.rs  simulation_scheduling.rs  simulation_ticked_mode.rs  simulation_timeout.rs
schema/: Cargo.toml
schema/src/: generate.rs  lib.rs  macros.rs  schema.rs
schema/src/_private/: mod.rs
schema/src/json_schema_impls/: array.rs  arrayvec07.rs  bytes1.rs  chrono04.rs  core.rs  decimal.rs  either1.rs  ffi.rs  indexmap2.rs  jiff02.rs  maps.rs  mod.rs  nonzero.rs  primitives.rs  semver1.rs  sequences.rs  serdejson.rs  std_time.rs  tuple.rs  url2.rs  uuid1.rs  wrapper.rs
schema/tests/: no_std.rs
schema/tests/integration/: bound.rs  chrono.rs  contract.rs  crate_alias.rs  default.rs  deprecated.rs  docs.rs  enum_repr.rs  enums.rs  enums_deny_unknown_fields.rs  enums_flattened.rs  enums_ref_variants.rs  enums_untagged_variant.rs  examples.rs  extend.rs  flatten.rs  from_into.rs  from_value.rs  garde.rs  inline_subschemas.rs  jiff.rs  macros.rs  main.rs  map.rs  remote_derive.rs  same_name.rs  schema_name.rs  schema_with.rs  settings.rs  skip.rs  std_types.rs  structs.rs  test_helper.rs  transform.rs  transparent.rs  unset.rs  validator.rs
schema/tests/ui/: example_fn.rs  invalid_attrs.rs  invalid_extend.rs  invalid_rename.rs  invalid_unset_attrs.rs  invalid_validation_attrs.rs  repr_missing.rs  repr_missing.stderr  repr_non_unit_variant.rs  repr_non_unit_variant.stderr  transform_str.rs
schema_derive/: Cargo.toml
schema_derive/src/: bound.rs  lib.rs  schema_exprs.rs
schema_derive/src/attr/: mod.rs  parse_meta.rs  schemars_to_serde.rs  validation.rs
