[package]
name = "nexosim-macros"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/nexosim"
readme = "README.md"
description = """
Internal macros for NeXosim simulator.
"""
categories = ["simulation", "aerospace", "science"]
keywords = [
    "simulation",
    "discrete-event",
    "systems",
    "cyberphysical",
    "real-time",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
