[package]
name = "nexosim-macros"
version = "1.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/nexosim"
readme = "README.md"
description = """
Internal macros for NeXosim simulator.
"""
categories = ["simulation", "aerospace", "science"]
keywords = [
    "simulation",
    "discrete-event",
    "systems",
    "cyberphysical",
    "real-time",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
