[package]
name = "nexosim-util"
# When incrementing version and releasing to crates.io:
# - Update crate version in this Cargo.toml
# - Update dependency in sibling crates
# - Remove path dependencies (if any)
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "nexosim-util-vX.Y.Z" git tag
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/nexosim"
readme = "README.md"
homepage = "https://github.com/asynchronics/nexosim"
description = """
Utilities for NeXosim-based simulations.
"""
categories = ["simulation", "aerospace", "science"]
keywords = [
    "simulation",
    "discrete-event",
    "systems",
    "cyberphysical",
    "real-time",
]

[dependencies]
nexosim = "0.3.3"

[dev-dependencies]
rand = "0.8"
thread-guard = "0.1.0"
